--- a/project/package.json
+++ b/project/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^5.7.0",
+    "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "stripe": "^17.7.0"
+    "stripe": "^17.7.0",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
