--- a/project/package.json
+++ b/project/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^5.7.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.49.1",
     "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
