--- a/project/package.json
+++ b/project/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
