--- a/project/package.json
+++ b/project/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "scan": "next dev & npx react-scan@latest localhost:3000",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "prettier --check --ignore-path .gitignore .",
+    "fmt:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@react-email/components": "^0.0.34",
@@ -30,7 +32,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^10.1.1",
     "postcss": "^8",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
