--- a/project/package.json
+++ b/project/package.json
@@ -16,12 +16,12 @@
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
-    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.1.2",
+    "shippo": "^2.15.0",
     "stripe": "^17.7.0",
     "tailwind-merge": "^3.0.2"
   },
