--- a/project/package.json
+++ b/project/package.json
@@ -16,6 +16,7 @@
     "@stripe/stripe-js": "^5.7.0",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.49.1",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "next": "^15.1.7",
     "react": "^19.0.0",
